// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResultsInfoBar code monitoring feature flag disabled 1`] = `
<DocumentFragment>
  <aside
    aria-label="Search results information"
    class="searchResultsInfoBar"
    data-testid="results-info-bar"
    role="region"
  >
    <div
      class="row"
    >
      <div />
      <div
        class="expander"
      />
      <ul
        class="nav align-items-center"
      >
        <li
          aria-hidden="true"
          class="divider"
        />
        <li
          class="mr-2 navItem"
        >
          <button
            aria-controls=""
            aria-haspopup="true"
            aria-label="Open search actions menu"
            class="btn btnOutlineSecondary btnSm d-flex align-items-center text-decoration-none"
            data-reach-menu-button=""
            id="menu-button-2"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="mdi-icon iconInline"
              fill="currentColor"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M16,12A2,2 0 0,1 18,10A2,2 0 0,1 20,12A2,2 0 0,1 18,14A2,2 0 0,1 16,12M10,12A2,2 0 0,1 12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12M4,12A2,2 0 0,1 6,10A2,2 0 0,1 8,12A2,2 0 0,1 6,14A2,2 0 0,1 4,12Z"
              />
            </svg>
          </button>
        </li>
      </ul>
      <button
        aria-label="Show filters"
        aria-pressed="false"
        class="btn btnOutlineSecondary btnSm d-flex align-items-center d-lg-none filtersButton"
        type="button"
      >
        Filters
        <svg
          aria-hidden="true"
          class="mdi-icon iconInline ml-2"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M16.59,5.59L18,7L12,13L6,7L7.41,5.59L12,10.17L16.59,5.59M16.59,11.59L18,13L12,19L6,13L7.41,11.59L12,16.17L16.59,11.59Z"
          />
        </svg>
      </button>
    </div>
  </aside>
</DocumentFragment>
`;

exports[`SearchResultsInfoBar code monitoring feature flag enabled, can create monitor from query 1`] = `
<DocumentFragment>
  <aside
    aria-label="Search results information"
    class="searchResultsInfoBar"
    data-testid="results-info-bar"
    role="region"
  >
    <div
      class="row"
    >
      <div />
      <div
        class="expander"
      />
      <ul
        class="nav align-items-center"
      >
        <li
          aria-hidden="true"
          class="divider"
        />
        <li
          class="mr-2 navItem"
        >
          <button
            aria-controls=""
            aria-haspopup="true"
            aria-label="Open search actions menu"
            class="btn btnOutlineSecondary btnSm d-flex align-items-center text-decoration-none"
            data-reach-menu-button=""
            id="menu-button-6"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="mdi-icon iconInline"
              fill="currentColor"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M16,12A2,2 0 0,1 18,10A2,2 0 0,1 20,12A2,2 0 0,1 18,14A2,2 0 0,1 16,12M10,12A2,2 0 0,1 12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12M4,12A2,2 0 0,1 6,10A2,2 0 0,1 8,12A2,2 0 0,1 6,14A2,2 0 0,1 4,12Z"
              />
            </svg>
          </button>
        </li>
      </ul>
      <button
        aria-label="Show filters"
        aria-pressed="false"
        class="btn btnOutlineSecondary btnSm d-flex align-items-center d-lg-none filtersButton"
        type="button"
      >
        Filters
        <svg
          aria-hidden="true"
          class="mdi-icon iconInline ml-2"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M16.59,5.59L18,7L12,13L6,7L7.41,5.59L12,10.17L16.59,5.59M16.59,11.59L18,13L12,19L6,13L7.41,11.59L12,16.17L16.59,11.59Z"
          />
        </svg>
      </button>
    </div>
  </aside>
</DocumentFragment>
`;

exports[`SearchResultsInfoBar code monitoring feature flag enabled, can create monitor from query, user not logged in 1`] = `
<DocumentFragment>
  <aside
    aria-label="Search results information"
    class="searchResultsInfoBar"
    data-testid="results-info-bar"
    role="region"
  >
    <div
      class="row"
    >
      <div />
      <div
        class="expander"
      />
      <ul
        class="nav align-items-center"
      >
        <li
          aria-hidden="true"
          class="divider"
        />
        <li
          class="mr-2 navItem"
        >
          <button
            aria-controls=""
            aria-haspopup="true"
            aria-label="Open search actions menu"
            class="btn btnOutlineSecondary btnSm d-flex align-items-center text-decoration-none"
            data-reach-menu-button=""
            id="menu-button-8"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="mdi-icon iconInline"
              fill="currentColor"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M16,12A2,2 0 0,1 18,10A2,2 0 0,1 20,12A2,2 0 0,1 18,14A2,2 0 0,1 16,12M10,12A2,2 0 0,1 12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12M4,12A2,2 0 0,1 6,10A2,2 0 0,1 8,12A2,2 0 0,1 6,14A2,2 0 0,1 4,12Z"
              />
            </svg>
          </button>
        </li>
      </ul>
      <button
        aria-label="Show filters"
        aria-pressed="false"
        class="btn btnOutlineSecondary btnSm d-flex align-items-center d-lg-none filtersButton"
        type="button"
      >
        Filters
        <svg
          aria-hidden="true"
          class="mdi-icon iconInline ml-2"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M16.59,5.59L18,7L12,13L6,7L7.41,5.59L12,10.17L16.59,5.59M16.59,11.59L18,13L12,19L6,13L7.41,11.59L12,16.17L16.59,11.59Z"
          />
        </svg>
      </button>
    </div>
  </aside>
</DocumentFragment>
`;

exports[`SearchResultsInfoBar code monitoring feature flag enabled, cannot create monitor from query 1`] = `
<DocumentFragment>
  <aside
    aria-label="Search results information"
    class="searchResultsInfoBar"
    data-testid="results-info-bar"
    role="region"
  >
    <div
      class="row"
    >
      <div />
      <div
        class="expander"
      />
      <ul
        class="nav align-items-center"
      >
        <li
          aria-hidden="true"
          class="divider"
        />
        <li
          class="mr-2 navItem"
        >
          <button
            aria-controls=""
            aria-haspopup="true"
            aria-label="Open search actions menu"
            class="btn btnOutlineSecondary btnSm d-flex align-items-center text-decoration-none"
            data-reach-menu-button=""
            id="menu-button-4"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="mdi-icon iconInline"
              fill="currentColor"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M16,12A2,2 0 0,1 18,10A2,2 0 0,1 20,12A2,2 0 0,1 18,14A2,2 0 0,1 16,12M10,12A2,2 0 0,1 12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12M4,12A2,2 0 0,1 6,10A2,2 0 0,1 8,12A2,2 0 0,1 6,14A2,2 0 0,1 4,12Z"
              />
            </svg>
          </button>
        </li>
      </ul>
      <button
        aria-label="Show filters"
        aria-pressed="false"
        class="btn btnOutlineSecondary btnSm d-flex align-items-center d-lg-none filtersButton"
        type="button"
      >
        Filters
        <svg
          aria-hidden="true"
          class="mdi-icon iconInline ml-2"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M16.59,5.59L18,7L12,13L6,7L7.41,5.59L12,10.17L16.59,5.59M16.59,11.59L18,13L12,19L6,13L7.41,11.59L12,16.17L16.59,11.59Z"
          />
        </svg>
      </button>
    </div>
  </aside>
</DocumentFragment>
`;

exports[`SearchResultsInfoBar unauthenticated user 1`] = `
<DocumentFragment>
  <aside
    aria-label="Search results information"
    class="searchResultsInfoBar"
    data-testid="results-info-bar"
    role="region"
  >
    <div
      class="row"
    >
      <div />
      <div
        class="expander"
      />
      <ul
        class="nav align-items-center"
      >
        <li
          aria-hidden="true"
          class="divider"
        />
        <li
          class="mr-2 navItem"
        >
          <button
            aria-controls=""
            aria-haspopup="true"
            aria-label="Open search actions menu"
            class="btn btnOutlineSecondary btnSm d-flex align-items-center text-decoration-none"
            data-reach-menu-button=""
            id="menu-button-10"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="mdi-icon iconInline"
              fill="currentColor"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M16,12A2,2 0 0,1 18,10A2,2 0 0,1 20,12A2,2 0 0,1 18,14A2,2 0 0,1 16,12M10,12A2,2 0 0,1 12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12M4,12A2,2 0 0,1 6,10A2,2 0 0,1 8,12A2,2 0 0,1 6,14A2,2 0 0,1 4,12Z"
              />
            </svg>
          </button>
        </li>
      </ul>
      <button
        aria-label="Show filters"
        aria-pressed="false"
        class="btn btnOutlineSecondary btnSm d-flex align-items-center d-lg-none filtersButton"
        type="button"
      >
        Filters
        <svg
          aria-hidden="true"
          class="mdi-icon iconInline ml-2"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M16.59,5.59L18,7L12,13L6,7L7.41,5.59L12,10.17L16.59,5.59M16.59,11.59L18,13L12,19L6,13L7.41,11.59L12,16.17L16.59,11.59Z"
          />
        </svg>
      </button>
    </div>
  </aside>
</DocumentFragment>
`;
